--- a/site/src/styles/index.css
+++ b/site/src/styles/index.css
@@ -1,11 +1,4 @@
-button {
-  border-radius: 1rem;
-}
-
-button:hover {
-  background-color: lightgray;
-}
-
-button:active {
-  background-color: darkgray;
+.formStyle{
+	max-width: 500px;
+	margin: auto;
 }
