--- a/site/src/styles/index.css
+++ b/site/src/styles/index.css
@@ -2,3 +2,17 @@
 	max-width: 500px;
 	margin: auto;
 }
+
+.watchlistRow{
+	background-color: #e5e5e5;
+}
+
+.watchlistRow:hover{
+	cursor: pointer;
+}
+
+.open > .dropdown-menu {
+    opacity: 1;
+    left: 0px;
+    display: block !important;
+}
