--- a/site/src/styles/index.css
+++ b/site/src/styles/index.css
@@ -2,3 +2,120 @@
 	max-width: 500px;
 	margin: auto;
 }
+.searchBar{
+	margin: 50px;
+  	display: flex;
+  	flex-direction: row;
+  	align-items: center;
+  	width: 900px;
+}
+/* drop down CSS */
+#nav, #nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+#nav li {
+    width: 132px;
+
+    text-align: center;
+    position: relative;
+
+    z-index: 1;
+}
+#nav li > ul {
+    background-color: white;
+}
+#active-nav {
+    background-color: grey;
+}
+#nav ul {
+    position: absolute;
+    display: none;
+}
+#nav ul ul {
+    left: 150px;
+    top: 0px;
+}
+#nav li:hover > ul {
+    display: block;
+}
+
+#nav a{
+    text-decoration: none;
+    color: #444;
+
+    width: 132px;
+    height: 50px;
+
+    text-align: center;
+    line-height: 50px;
+    border-bottom: 2px solid #FFF;
+
+    display: block;
+}
+#nav a:hover {
+    border-bottom: 2px solid gold;
+    color: gold;
+}
+/* Ends */
+.movie-row {
+	background-color: aliceblue;
+	display: flex;
+	flex-direction: row;
+}
+.movie-row:hover{
+	scale: 1.05;
+}
+.movie-row:hover .box-hover-elements{
+	visibility: visible;
+}
+.movie-row img {
+	height: 150px;
+	width: 150px;
+	padding: 0;
+}
+.movie-header {
+	display: flex;
+	flex-direction: row;
+	font-weight: bold;
+	align-self: center;
+	height: 50px;
+}
+#movies-all {
+	padding: 0;
+}
+#poster {
+	width: 150px;
+}
+.inner-text {
+	text-align: center;
+	/* padding-top: 60px; */
+	align-self: center;
+	font-size: 10px;
+}
+
+.header-text {
+	text-align: center;
+	/* padding-top: 60px; */
+	align-self: center;
+	font-size: 15px;
+}
+.box-hover-elements {
+	visibility: hidden;
+}
+
+
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+	.inner-text {
+		font-size: 15px;
+	}
+	.header-text {
+		font-size: 20px;
+	}
+	.movie-row {
+		background-color: lightgray;
+	}
+}
