--- a/site/src/styles/index.css
+++ b/site/src/styles/index.css
@@ -8,12 +8,13 @@
   	flex-direction: row;
   	align-items: center;
   	width: 900px;
-
 }
 
 #search-button {
     background: #dc3545;
     border-color: #dc3545;
+    color: #fff;
+
 }
 #search-button:hover{
     color: #fff;
@@ -21,8 +22,12 @@
     border-color: #b02a37;
 }
 
-
+#search-bar {
+    margin-left: 10px;
+}
 /* drop down CSS */
+
+
 #nav, #nav ul {
     list-style: none;
     padding: 0;
@@ -30,7 +35,6 @@
 }
 #nav li {
     width: 132px;
-
     text-align: center;
     position: relative;
 
@@ -47,11 +51,14 @@
     display: none;
 }
 #nav ul ul {
-    left: 150px;
+    left: 132px;
     top: 0px;
 }
 #nav li:hover > ul {
     display: block;
+    width: 132px;
+    height: 50px;
+
 }
 
 #year-button{
@@ -81,6 +88,8 @@
 
     width: 110px;
     height: 50px;
+    margin-right: 10px;
+    margin-left: 10px;
 
     font-size: 18px;
     text-align: center;
@@ -94,6 +103,11 @@
     color: #dc3545;
 }
 /* Ends */
+
+
+
+
+
 .movie-row {
 	background-color: #e5e5e5;
 	display: flex;
