--- a/site/src/styles/watchlist.css
+++ b/site/src/styles/watchlist.css
@@ -1,3 +1,12 @@
 #createWatchlist{
-margin-right: 10px;
+    margin-right: 10px;
+    padding: 10px 20px;
+    border-radius: 0px;
+    font-size: 18px;
+}
+
+#getSuggestionList{
+    padding: 10px 20px;
+    border-radius: 0px;
+    font-size: 18px;
 }
