added acceptance testing for security features

--- a/site/src/styles/index.css
+++ b/site/src/styles/index.css
@@ -294,3 +294,14 @@ body {
 	white-space: break-spaces !important;
 }
 
+#backButton, #create-montage{
+    color: white;
+    padding: 10px 20px;
+    background-color: #dc3545;
+    margin: 10px;
+    border: none;
+}
+
+#backButton:hover, #create-montage:hover{
+    background-color: #bb2d3b;
+}
