--- a/site/src/styles/watchlist.css
+++ b/site/src/styles/watchlist.css
@@ -5,8 +5,8 @@
     font-size: 18px;
 }
 
-#getSuggestionList{
-    padding: 10px 20px;
+#CreateSuggestionlistButton{
+		padding: 10px 20px;
     border-radius: 0px;
     font-size: 18px;
 }
