--- a/site/src/styles/index.css
+++ b/site/src/styles/index.css
@@ -106,7 +106,9 @@
 .box-hover-elements {
 	visibility: hidden;
 }
-
+.dollar-icon {
+  color: rgba(0, 0, 0, 0.832);
+}
 .movieButton {
     border: 0;
     display: flex;
